# general-conference-reference

./: .gitignore  Dockerfile  PLAN.md  README.md  format.sh  gcon.py  justfile  pyproject.toml  requirements.txt
202310/: key_principles.md  key_principles_list.md  outlines.md  reference.docx  reference.md  summaries.md  talk_list.txt  themes.md
202310/talks/html/: 11bednar.html  12wright.html  13daines.html  14godoy.html  15christofferson.html  16ardern.html  17oaks.html  21eyring.html  22andersen.html  23newman.html  24costa.html  25stevenson.html  26choi.html  27phillips.html  28rasband.html  31sabin.html  32koch.html  33runia.html  34soares.html  41ballard.html  42freeman.html  43parrella.html  44cook.html  45uchtdorf.html  46waddell.html  47eyring.html  51nelson.html  52pingree.html  53cordon.html  54gong.html  55esplin.html  56giraud-carrier.html  57renlund.html
202310/talks/markdown/: 11bednar.md  12wright.md  13daines.md  14godoy.md  15christofferson.md  16ardern.md  17oaks.md  21eyring.md  22andersen.md  23newman.md  24costa.md  25stevenson.md  26choi.md  27phillips.md  28rasband.md  31sabin.md  32koch.md  33runia.md  34soares.md  41ballard.md  42freeman.md  43parrella.md  44cook.md  45uchtdorf.md  46waddell.md  47eyring.md  51nelson.md  52pingree.md  53cordon.md  54gong.md  55esplin.md  56giraud-carrier.md  57renlund.md
202310/talks/outline/: 11bednar-outline.md  (+32 more)
202404/: key_principles.md  key_principles_list.md  outlines.md  reference.docx  reference.md  summaries.md  talk_list.txt  themes.md
202410/: key_principles.md  key_principles_list.md  outlines.md  reference.docx  reference.md  summaries.md  talk_list.txt  themes.md
202504/: key_principles.md  key_principles_list.md  outlines.md  reference.docx  reference.md  summaries.md  talk_list.txt  themes.md
202510/: key_principles.md  key_principles_list.md  outlines.md  reference.docx  reference.md  summaries.md  talk_list.txt  themes.md
202604/: key_principles.json  key_principles.md  key_principles_list.md  outlines.md  reference.docx  reference.md  summaries.md  talk_list.txt  themes.json  themes.md
justfiles/: docker.just  python.just  tools.just
src/general_conference_reference/: __init__.py  __main__.py  gcon.py
tests/: test_gcon.py
tests/fixtures/: clean_markdown.md  conference_index.html  raw_markdown.md  reference_baseline.md  talk.html  talk_stage.html
(+770 files in other folders)
