[project]
name = "general-conference-reference"
version = "0.1.0"
description = "Generate reference material from General Conference."
authors = [{ name = "Andrew Bennett", email = "potatosaladx@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "click (>=8.3.2,<9.0.0)",
    "openai (>=2.30.0,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
]

[project.scripts]
general_conference_reference = "general_conference_reference.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=26.3.1,<27",
    "pytest>=9.0.2,<10",
]

[tool.hatch.build.targets.sdist]
include = ["src/general_conference_reference"]

[tool.hatch.build.targets.wheel]
include = ["src/general_conference_reference"]

[tool.hatch.build.targets.wheel.sources]
"src/general_conference_reference" = "general_conference_reference"

[tool.black]
line-length = 132
target-version = ['py313']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
